Fixed contact me overlap

--- a/design.css
+++ b/design.css
@@ -241,7 +241,7 @@ section #services li {
   width: 120px;
   height: 140px;
   display: inline-block;
-  margin: 20px;
+  margin: 5vw;
   list-style: none;
 }
 section #services li div {
@@ -263,25 +263,17 @@ section #services li span {
   width: 120px;
   height: 20px;
   display: block;
-  padding: 30px 0px;
+  padding: 3vw 0px;
   color: #fff;
   text-transform: uppercase;
-  font-size: 1em;
+  font-size: 0.8em;
   text-align: center;
 }
 @media only screen and (max-width: 530px) {
-  section #services li {
-  width: 60px;
-  height: 70px;
-  display: inline-block;
-  margin: 10px;
-  list-style: none;
-}
 section #services li {
   width: 60px;
   height: 70px;
   display: inline-block;
-  margin: 10px;
   list-style: none;
 }
 section #services li div {
